src/test/deca/context/invalid/class/54-declMethodeRetourDiff2.deca
/* Description:
      teste la régle (2.6) Déclaration d'une méthode qui existe déja dans la class supérieur,
      mais qui n'a pas le meme type de retour

    Historique:
      cree le 22/01/2020
*/


class A {
  int methode(float a, float b){} // methode declarer pour la premiere fois ici
  }

class B extends A{
  void methode(float d, float e){} // erreur au niveau de type de retour de la methode
}
